# fordefi-cosigner-bot

./: .env.example  .gitignore  README.md  pyproject.toml
cosigner/: config.py  main.py
cosigner/client/: auth.py  fordefi_client.py
cosigner/models/: decision.py  transaction.py
cosigner/server/: app.py  routes.py  signature_verifier.py
cosigner/tests/: test_personal_message.py
cosigner/tests/fixtures/: sample_personal_msg.json
cosigner/validators/: base.py  default.py  registry.py
cosigner/validators/evm/: personal_message.py
