[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fordefi-cosigner"
version = "0.1.0"
description = "Fordefi co-signer bot — reference implementation"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "pydantic-settings==2.5.2",
    "ecdsa==0.19.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cosigner*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["cosigner/tests"]
